--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,6 @@
     {% include 'partials/_footer.html' %}
     <script src={% static "js/jquery-3.3.1.min.js" %} ></script>
     <script src={% static "js/bootstrap.bundle.min.js" %}></script>
-    <script src={% static "js/main.js" %}></script>ß
+    <script src={% static "js/main.js" %}></script>
   </body>
 </html>
