--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content%}
    <section id="showcase-inner" class="py-5 text-white">
       <div class="container">
@@ -14,7 +14,6 @@
         </div>
       </div>
     </section>
-
     <!-- Breadcrumb -->
     <section id="bc" class="mt-3">
       <div class="container">
@@ -41,7 +40,7 @@
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt,
               pariatur!
             </p>
-            <img src="assets/img/about.jpg" alt="" />
+            <img src={% static "img/about.jpg" %} alt="" />
             <p class="mt-4">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Perspiciatis esse officia repudiandae ad saepe ex, amet neque quod
@@ -54,7 +53,7 @@
             <div class="card">
               <img
                 class="card-img-top"
-                src="assets/img/doctors/kyle.jpg"
+                src={% static "img/doctors/kyle.jpg" %}
                 alt="Seller of the month"
               />
               <div class="card-body">
@@ -91,7 +90,7 @@
         <div class="row text-center">
           <div class="col-md-4">
             <img
-              src="assets/img/doctors/kyle.jpg"
+              src={% static "img/doctors/kyle.jpg" %}
               alt=""
               class="rounded-circle mb-3 img-fluid"
               style="object-fit: cover; width: 300px; height: 300px"
@@ -107,7 +106,7 @@
 
           <div class="col-md-4">
             <img
-              src="assets/img/doctors/emma.jpg"
+              src={% static "img/doctors/emma.jpg" %}
               alt=""
               class="rounded-circle mb-3 img-fluid"
               style="object-fit: cover; width: 300px; height: 300px"
@@ -121,7 +120,7 @@
 
           <div class="col-md-4">
             <img
-              src="assets/img/doctors/jenny.jpg"
+              src={% static "img/doctors/jenny.jpg" %}
               alt=""
               class="rounded-circle mb-3 img-fluid"
               style="object-fit: cover; width: 300px; height: 300px"
