--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,5 +1,6 @@
 <!-- <!DOCTYPE html> -->
 {% extends 'base.html' %}
+{% load static %}
 <!--
   <head>
 
@@ -200,7 +201,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src="assets/img/clinics/clinic-1.jpg"
+                src={% static "img/clinics/clinic-1.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -251,7 +252,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src="assets/img/clinics/clinic-2.jpg"
+                src={% static "img/clinics/clinic-2.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -305,7 +306,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src="assets/img/clinics/clinic-3.jpg"
+                src={% static "img/clinics/clinic-3.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
