Step 6 : index page

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -38,7 +38,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src={% static "/img/clinics/clinic-1.jpg" %}
+                src={% static "img/clinics/clinic-1.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -89,7 +89,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src={% static "/img/clinics/clinic-2.jpg" %}
+                src={% static "img/clinics/clinic-2.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -143,7 +143,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src={% static "/img/clinics/clinic-3.jpg" %}
+                src={% static "img/clinics/clinic-3.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -195,7 +195,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src={% static "/img/clinics/clinic-4.jpg" %}
+                src={% static "img/clinics/clinic-4.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -246,7 +246,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src={% static "/img/clinics/clinic-5.jpg" %}
+                src={% static "img/clinics/clinic-5.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -297,7 +297,7 @@
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src={% static "/img/clinics/clinic-6.jpg" %}
+                src={% static "img/clinics/clinic-6.jpg" %}
                 alt=""
               />
               <div class="card-img-overlay">
