--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -82,7 +82,7 @@
                   </div>
                 </div>
                 <hr />
-                <a href={% url 'listings:index' %} class="btn btn-primary btn-block"
+                <a href={% url 'listings:index' %}{{ listing.id }} class="btn btn-primary btn-block"
                   >More Info</a
                 >
               </div>
