--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -116,7 +116,7 @@
               tempore! Consectetur, id commodi!
             </p>
             <div class="search">
-              <form action="search.html">
+              <form action="{% url 'listings:search' %}" method="GET">
                 <!-- Form Row 1 -->
                 <div class="form-row">
                   <div class="col-md-12 mb-3">
@@ -137,24 +137,9 @@
                       <option selected="true" disabled="disabled">
                         District (All)
                       </option>
-                      <option value="IL">Islands</option>
-                      <option value="KT">Kwai Tsing</option>
-                      <option value="NR">North</option>
-                      <option value="SK">Sai Kung</option>
-                      <option value="ST">Sha Tin</option>
-                      <option value="TP">Tai Po</option>
-                      <option value="TW">Tsuen Wan</option>
-                      <option value="TM">Tuen Mun</option>
-                      <option value="YL">Yuen Long</option>
-                      <option value="KC">Kowloon City</option>
-                      <option value="KW">Kwun Tong</option>
-                      <option value="SS">Sham Shui Po</option>
-                      <option value="WT">Wong Tai Sin</option>
-                      <option value="YM">Yau Tsim Mong</option>
-                      <option value="CW">Central & Western</option>
-                      <option value="ER">Eastern</option>
-                      <option value="SR">Southern</option>
-                      <option value="WC">Wan Chai</option>
+                      {% for key,value in district_choices.items %}
+                        <option value="{{ key }}">{{ value }}</option>
+                      {% endfor %}
                     </select>
                   </div>
                   <div class="col-md-4 mb-3">
@@ -163,16 +148,9 @@
                       <option selected="true" disabled="disabled">
                         Night (All)
                       </option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                      <option value="6">6</option>
-                      <option value="7">7</option>
-                      <option value="8">8</option>
-                      <option value="9">9</option>
-                      <option value="10">10</option>
+                      {% for key,value in room_choices.items %}
+                        <option value="{{ key }}">{{ value }}</option>
+                      {% endfor %}
                     </select>
                   </div>
                   <div class="col-md-4 mb-3">
@@ -180,9 +158,9 @@
                       <option selected="true" disabled="disabled">
                         Bedrooms (All)
                       </option>
-                      <option value="1">Private Rooms</option>
-                      <option value="2">Semi-Private Rooms</option>
-                      <option value="3">Standard (Multi-bed) Rooms</option>
+                      {% for key,value in rooms_choices.items %}
+                        <option value="{{ key }}">{{ value }}</option>
+                      {% endfor %}
                     </select>
                   </div>
                 </div>
