--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -94,3 +94,7 @@ img {
     font-size: 30px; }
   #showcase-inner h1 {
     font-size: 40px; } }
+
+input[type="text"]:focus {
+  border-color: #ef8ecb; /* Green border color when focused */
+}
