--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -31,20 +31,37 @@
           </ul>
 
           <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+            
+            <li {% if 'dashboard' in request.path %} class="nav-item mr-3 active" {% else %} class="nav-item mr-3" {% endif %}>
+              <a class="nav-link" href="{% url 'accounts:dashboard' %}">
+                <i class="fas fa-user-plus"></i> Welcome {{ user.username }} (dashboard)
+              </a>
+            </li>
+
             <li class="nav-item mr-3">
-              {% comment %}fix later {% endcomment %}
-              <a class="nav-link" href="register.html">
+              <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
+                <i class="fas fa-sign-out-alt"></i>logout
+              </a>
+              <form action="{% url 'accounts:logout' %}" method="POST" id="logout">
+                {% csrf_token %}
+                <input type="hidden"/>
+              </form>
+            </li>
+            {% else %}
+            <li {% if 'register' in request.path %} class="nav-item mr-3 active" {% else %} class="nav-item mr-3" {% endif %}>
+              <a class="nav-link" href="{% url 'accounts:register' %}">
                 <i class="fas fa-user-plus"></i> Register</a
               >
             </li>
-            <li class="nav-item mr-3">
-              {% comment %}fix later {% endcomment %}
-              <a class="nav-link" href="login.html">
+            <li {% if 'login' in request.path %} class="nav-item mr-3 active" {% else %} class="nav-item mr-3" {% endif %}>
+              <a class="nav-link" href="{% url 'accounts:login' %}">
                 <i class="fas fa-sign-in-alt"></i>
 
                 Login</a
               >
             </li>
+            {% endif %}
           </ul>
         </div>
       </div>
