Step 13 : contacts:contact

--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -32,7 +32,7 @@
         </nav>
       </div>
     </section>
-
+    {% include 'partials/_alert.html' %}
     <!-- Listing -->
     <section id="listing" class="py-4">
       <div class="container">
@@ -191,22 +191,35 @@
             </button>
           </div>
           <div class="modal-body">
-            <form>
+            <form method="POST" action="{% url 'contacts:contact' %}">
+              {% csrf_token %}
+              <input type="hidden" name="listing_id" value="{{listing.id}}"/>
+              <input type="hidden" name="email_id" value="{{user.email}}"/>
+              {% if user.is_authenticated %}
+              <input type="hidden" name="user_id" value="{{user.id}}"/>
+              {% else %}
+              <input type="hidden" name="user_id" value="0"/>
+              {% endif %}
               <div class="form-group">
                 <label for="property_name" class="col-form-label"
-                  >Property:</label
+                  >Clinic:</label
                 >
                 <input
                   type="text"
                   name="listing"
                   class="form-control"
-                  value="45 Prince Street"
-                  disabled
+                  value="{{ listing.title | title }}"
+                  readonly
                 />
               </div>
               <div class="form-group">
                 <label for="name" class="col-form-label">Name:</label>
-                <input type="text" name="name" class="form-control" required />
+                <input 
+                   type="text" 
+                   name="name" 
+                   class="form-control" 
+                   {% if user.is_authenticated %} value="{{user.first_name}} {{user.last_name}}" readonly {% endif %}
+                />
               </div>
               <div class="form-group">
                 <label for="email" class="col-form-label">Email:</label>
@@ -214,7 +227,7 @@
                   type="email"
                   name="email"
                   class="form-control"
-                  required
+                  {% if user.is_authenticated %} value="{{user.email}}" readonly {% endif %}
                 />
               </div>
               <div class="form-group">
