--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,74 +1,109 @@
 {% extends 'base.html' %}
-
-{% load humanize %} 
-
-{% load static %}
+<!-- load humanize -->
+{% load humanize %}
+<!-- block content -->
 {% block content %}
-    <section id="showcase-inner" class="py-5 text-white">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-12">
-            <h1 class="display-4">User Dashboard</h1>
-            <p class="lead">Manage your BC Health Care account</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <!-- Breadcrumb -->
-    <section id="bc" class="mt-3">
-      <div class="container">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="{% url 'pages:index' %}"> <i class="fas fa-home"></i> Home</a>
-            </li>
-            <li class="breadcrumb-item active">Dashboard</li>
-          </ol>
-        </nav>
+<section id="showcase-inner" class="py-5 text-white">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <h1 class="display-4">User Dashboard</h1>
+        <p class="lead">Manage your BC Health Care account</p>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
 
-    <section id="dashboard" class="py-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2>Welcome {{ user.username | title }}</h2>
-            <p>Here are the clinic listings that you have inquired about</p>
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Clinic</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>22</td>
-                  <td>Harmony Health Clinic</td>
-                  <td>
-                    <a class="btn btn-light" href="#">View Listing</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>43</td>
-                  <td>BrightCare Health Clinic</td>
-                  <td>
-                    <a class="btn btn-light" href="#">View Listing</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>31</td>
-                  <td>Healing Horizons Clinic</td>
-                  <td>
-                    <a class="btn btn-light" href="#">View Listing</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+<!-- Breadcrumb -->
+<section id="bc" class="mt-3">
+  <div class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="{% url 'pages:index' %}">
+            <i class="fas fa-home"></i> Home</a
+          >
+        </li>
+        <li class="breadcrumb-item active">Dashboard</li>
+      </ol>
+    </nav>
+  </div>
+</section>
+
+{% include 'partials/_alert.html' %}
+
+<section id="dashboard" class="py-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Welcome {{ user.username | title }}</h2>
+        {% if contacts %}
+        <p>Here are the clinic listings that you have inquired about</p>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Clinic</th>
+              <th></th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <!-- for loop -->
+            {% for contact in contacts %}
+            <tr>
+              <td>{{contact.listing_id}}</td>
+              <td>{{contact.listing | title}}</td>
+              <td>
+                <a
+                  class="btn btn-light"
+                  href="{% url 'listings:listing' contact.listing_id %}"
+                  >View Listing</a
+                >
+                <button
+                  class="btn btn-danger"
+                  data-url="{% url 'contacts:delete_contact' contact.id %}"
+                  data-toggle="modal"
+                  data-target="#deleteConfirmModal"
+                  data-id="{{contact.id}}"
+                >
+                  Delete Listing
+                </button>
+                <a
+                  href="{% url 'contacts:edit_contact' contact.id %}"
+                  class="btn btn-success"
+                  >Edit Message</a
+                >
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        {% else %}
+        <p>You have not made any inquiries yet.</p>
+        {% endif %}
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteConfirmModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirm DELETE</h5>
+        <button class="close" type="button" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete this inquiry?</p>
+        <a href="" class="btn btn-danger" id="confirmDeleteBtn">Yes</a>
+        <button class="btn btn-info" data-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
