--- a/templates/contacts/edit_contact.html
+++ b/templates/contacts/edit_contact.html
@@ -3,5 +3,23 @@
 {% load widget_tweaks %}
 
 {% block content %}
-
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card p-6 shadow-sm">
+                <div class="text-center mb-4">Edit Message</div>
+                <form action="{% url 'contacts:edit_contact' contact.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        {% if form.message.errors %}
+                            <div class="text-danger mb-2">{{ form.message.errors }}</div>
+                        {% endif %}
+                        {{ form.message | add_class:"form_control" }}
+                    </div>
+                    <button class="btn btn-primary w-100" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
